____________________________________________________________________________
[  1495] By: autrijus@autribsd                     on 2001/08/01 19:13:52
	Log: * The Class::PseudoHash module, v0.01.