@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 # $File: //member/autrijus/Class-PseudoHash/Makefile.PL $ $Author: autrijus $
-# $Revision: #2 $ $Change: 1496 $ $DateTime: 2001/08/01 19:19:18 $
+# $Revision: #3 $ $Change: 1677 $ $DateTime: 2001/09/03 20:41:22 $
 
 require 5.005;
 
@@ -15,7 +15,7 @@ WriteMakefile(
     BINARY_LOCATION	=> 'x86/Class-PseudoHash.tar.gz',
 
     PREREQ_PM		=> {
-	'Test::Simple'	=> '0.01',
+	'Test::More'	=> '0.11',
     },
 
     dist		=> {
